# OfficeDataDisassembler

./: .gitignore  odd.py  patch.csv  patch_tape.py  pyproject.toml
src/officedata/: __init__.py  cli.py  display.py  image_tools.py  odd.py
tests/: test_build.py  test_tools.py
