
[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "office-data-disassembler"
description = "3ESS Office Data Tools"
readme = "README.md"

requires-python = ">=3.10,<3.14"
dynamic = ["version"]

dependencies = [
    "fastcrc>=0.3.5",
    "numpy==2.1.*",
    "ruff>=0.14.10",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/officedata"]

[tool.hatch.version]
path = "src/officedata/__init__.py"
fallback-version = "0.0.0"

[project.scripts]
odd = "officedata.cli:main"
